//
//  DashboardView.swift
//  MockingTEST
//
//  Created by mac on 14/3/2023.
//

import SwiftUI

struct DashboardView: View {
    var body: some View {
        VStack {
            Text("Hello World")
            .navigationTitle("Dashboard")
        }
    }
}

struct DashboardView_Previews: PreviewProvider {
    static var previews: some View {
        DashboardView()
    }
}
